data/derived/comb/progs/unify/prog1087.ml.out
Characters 138-139:
  if (temprand = 0) then expr ^ "VarX"
                 ^
Error: This expression has type int but an expression was expected of type
         int * int -> int
